--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Shawn Li (黎力)"
-  avatar           : "images/1756788277061.jpg"
-  bio              : "PhD student at USC"
+  avatar           : "images/IMG_8082.jpg"
+  bio              : "PhD student at HArvard"
   location         : "USA"
   employer         :
   pubmed           : 
