--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 title                    : "Surjo Dey"
 description              : "Surjo Dey's Homepage"
-repository               : "lili0415/lili0415.github.io"
+repository               : "surjo0/surjo0.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
@@ -21,14 +21,14 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Shawn Li (黎力)"
-  avatar           : "images/IMG_8082.jpg"
-  bio              : "PhD student at HArvard"
-  location         : "USA"
+  name             : "Surjo Dey"
+  avatar           : "images/IMG_8082~2.jpg"
+  bio              : "Final Year B.Tech CSE Student | Aspiring Computer Vision Researcher"
+  location         : "India"
   employer         :
   pubmed           : 
-  googlescholar    : "https://scholar.google.com/citations?user=r4kIL4cAAAAJ&hl"
-  email            : "li.li02@usc.edu"
+  googlescholar    : "https://scholar.google.com/citations?user=FibXAB4AAAAJ&hl=en"
+  email            : "22cs3072@gmail.com"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -37,7 +37,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "lili0415"
+  github           : "surjo0"
   google_plus      :
   keybase          :
   instagram        :
@@ -45,7 +45,7 @@ author:
   lastfm           :
   linkedin         : 
   dblp             : # e.g., "https://dblp.org/pid/xx/xxxx.html"
-  orcid            : "https://orcid.org/0009-0003-2007-2706"
+  orcid            : "https://orcid.org/0009-0000-8962-3164"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
