--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Surjo Dey"
-description              :
+description              : "Homepage"
 repository               : "surjo0/surjo0.github.io"
 google_scholar_stats_use_cdn : true
 
