--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ google_analytics_id      :  # get google_analytics_id from https://analytics.goo
 
 # SEO Related
 google_site_verification :  google9860f0f27384431a.html
-bing_site_verification   :  # get bing_site_verification from https://www.bing.com/webmasters/about
+bing_site_verification   :  5FEBEDB3D685DF26B3C9D19720CFBAE5
 baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.baidu.com/login/index?u=/site/index
 
 # Site Author
